--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-  "CosmosDB":{
-    "endpoint": "$ENV(COSMOSDB_ENDPOINT)",
-    "key": "$ENV(COSMOSDB_API_KEY)",
-    "database": "$ENV(COSMOSDB_DATABASE)",
-    "userAgentSuffix": "QCObjectsCosmosDBAPIClient",
-    "partitionKey": ["$ENV(COSMOSDB_PARTITION_KEY)"]
-  }
+  "gmail_user":"$ENV(GMAIL_USER)",
+  "gmail_password":"$ENV(GMAIL_PASSWORD)",
+  "gmail_from":"$ENV(GMAIL_FROM)",
+  "gmail_to":"$ENV(GMAIL_TO)",
+  "newsletter_subject_user": "$ENV(NEWSLETTER_SUBJECT_USER)",
+  "newsletter_subject_backoffice": "$ENV(NEWSLETTER_SUBJECT_BACKOFFICE)",
+  "gmail_subject":"$ENV(GMAIL_SUBJECT)"
 }
