change prefix newsletter to sendemail

--- a/config.json
+++ b/config.json
@@ -3,9 +3,9 @@
   "gmail_password":"$ENV(GMAIL_PASSWORD)",
   "gmail_from":"$ENV(GMAIL_FROM)",
   "gmail_to":"$ENV(GMAIL_TO)",
-  "newsletter_subject_user": "$ENV(NEWSLETTER_SUBJECT_USER)",
-  "newsletter_subject_backoffice": "$ENV(NEWSLETTER_SUBJECT_BACKOFFICE)",
-  "newsletter_user_template_file": "$ENV(NEWSLETTER_USER_TEMPLATE_FILE)",
-  "newsletter_backoffice_template_file": "$ENV(NEWSLETTER_BACKOFFICE_TEMPLATE_FILE)",
-  "gmail_subject":"$ENV(GMAIL_SUBJECT)"
+  "gmail_subject":"$ENV(GMAIL_SUBJECT)",
+  "sendemail_subject_user": "$ENV(SENDEMAIL_SUBJECT_USER)",
+  "sendemail_subject_backoffice": "$ENV(SENDEMAIL_SUBJECT_BACKOFFICE)",
+  "sendemail_user_template_file": "$ENV(SENDEMAIL_USER_TEMPLATE_FILE)",
+  "sendemail_backoffice_template_file": "$ENV(SENDEMAIL_BACKOFFICE_TEMPLATE_FILE)"
 }
